--- a/.aws/config
+++ b/.aws/config
@@ -1,4 +1,6 @@
 [default]
-role_arn=arn:aws:iam::*
+role_arn=arn:aws:iam::12341234:role/rolename
+aws_access_key_id=123123123
+aws_secret_access_key=123123123
 credential_source=Ec2InstanceMetadata
 region=us-east-1
