--- a/default.conf
+++ b/default.conf
@@ -1,11 +1,10 @@
 server {
-  listen 80 default_server;
-  listen [::]:80 default server;
-  root templates/index.html;
-  index index.html;
+  listen 80;
+  listen [::]:80;
+
+  gzip on;
 
   location / {
-    include proxy_params;
     proxy_pass http://localhost:5000;
   }
 }
