--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,13 @@
 server {
   listen 80;
   listen [::]:80;
+  server_name localhost;
 
   gzip on;
 
   location / {
+    root /app/templates;
+    index index.html;
     proxy_pass http://localhost:5000;
   }
 }
