--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,10 +6,10 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==0.10.0
 MarkupSafe==1.1.1
-Pillow==8.3.2
+Pillow>=9.0.0
 python-dateutil==2.8.1
 s3transfer==0.3.4
 six==1.15.0
-urllib3==1.26.3
+urllib3>=1.26.5
 Werkzeug==1.0.1
 gunicorn==20.1.0
